--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "homebridge-govee",
   "alias": "Govee",
   "version": "4.28.1-beta.6",
-  "author": {
+  "author": Jerrod"
     "name": "bwp91",
     "email": "bwp91@icloud.com"
   },
